kubernetes/khaleesi-ninja-environment/data/grpc-web-envoy.yml
static_resources:
  listeners:
  - name: "listener_0"
    address:
      socket_address: { address: "0.0.0.0", port_value: "8010" }
    filter_chains:
    - filters:
      - name: "envoy.filters.network.http_connection_manager"
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          codec_type: "auto"
          stat_prefix: "ingress_http"
          route_config:
            name: "local_route"
            virtual_hosts:
            - name: "local_service"
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: "grpc_service"
                  timeout: "0s"
                  max_stream_duration:
                    grpc_timeout_header_max: "0s"
          http_filters:
          - name: "envoy.filters.http.health_check"
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck"
              pass_through_mode: false
              headers:
              - name: ":path"
                string_match:
                  safe_regex:
                    google_re2: {}
                    regex: "/monitoring/(alive|ready)"
          - name: "envoy.filters.http.grpc_web"
          - name: "envoy.filters.http.router"
  clusters:
  - name: "grpc_service"
    connect_timeout: "0.25s"
    type: "logical_dns"
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
        explicit_http_config:
          http2_protocol_options: {}
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "cluster_0"
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: "127.0.0.1"
                    port_value: 8000
